<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="img_ballot_logo_description">a image of a person putting a vote into ballot box</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="election_information">Election Information: %s</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="failed_representatives">"Failed to fetch Representatives"</string>
    <string name="failed_address">""You need to set a Address""</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="img_representative_description">a photo of the representative</string>
    <string name="a_image_of_the_facebook_logo">A image of the facebook logo</string>
    <string name="a_image_of_twitter_logo">A image of Twitter logo</string>
    <string name="a_image_representing_the_world_wide_web">A Image representing the World Wide Web</string>
    <string name="no_connection">Please connect to the Internet to continue</string>
    <string name="failed_to_load_url_to_browser">failed to load URL to Browser</string>
    <string name="failed_location_permited">You need to enable Location on device</string>

    <!--  Add necessary string values -->

</resources>
