<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!--  Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!--  Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representatives_scene">

        <!--  Add visual styling and content -->
        <TextView
            android:id="@+id/tv_search_title"
            style="@style/fragment_representative_title"
            android:text="@string/representative_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!--  Add visual styling and content -->
        <EditText
            android:id="@+id/et_address_line_1"
            style="@style/et_address_style"
            android:autofillHints="@string/address_line_1"
            android:hint="@string/address_line_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_search_title" />

        <!-- TODO: Add data binding value -->
        <!--  Add visual styling and content -->
        <EditText
            android:id="@+id/et_address_line_2"
            style="@style/et_address_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="@string/address_line_2"
            android:hint="@string/address_line_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_address_line_1" />

        <!-- TODO: Add data binding value -->
        <!--  Add visual styling and content -->
        <EditText
            android:id="@+id/et_city"
            style="@style/et_address_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/city"
            android:hint="@string/city"
            app:layout_constraintEnd_toStartOf="@id/spinner_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_address_line_2" />

        <!--  Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!--  Add visual styling and content -->
        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/et_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_city"
            app:layout_constraintTop_toTopOf="@id/et_city" />

        <!-- TODO: Add data binding value -->
        <!--  Add visual styling and content -->
        <EditText
            android:id="@+id/et_zip"
            style="@style/zip_style"
            android:hint="@string/zip"
            android:autofillHints="@string/zip"
            app:layout_constraintEnd_toEndOf="@id/et_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_city" />

        <!--  Add visual styling and label -->
        <Button
            android:id="@+id/btn_search"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            app:layout_constraintTop_toBottomOf="@id/et_zip" />

        <!--  Add visual styling and content -->
        <Button
            android:id="@+id/btn_location"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintTop_toBottomOf="@id/btn_search" />

        <!--  Add visual styling and content -->
        <TextView
            android:id="@+id/tv_representative_title"
            style="@style/fragment_representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_location" />

        <!--  Add Representatives RecyclerView -->
        <!--  Add visual styling and content -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_representatives"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_representative_title" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>