<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.network.models.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginBottom="@dimen/tiny_margin">

        <ImageView
            android:id="@+id/representative_photo"
            style="@style/img_style_representative"
            app:fetchImage="@{representative.official.photoUrl}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/img_representative_description"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_profile"
            tools:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/office_name"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Office Name"
            style="@style/tv_office_style" />

        <TextView
            android:id="@+id/official_name"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toStartOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@+id/office_name"
            tools:text="Official Name"
            style="@style/tv_official_name_style" />

        <TextView
            android:id="@+id/party_name"
            style="@style/tv_party_name_style"
            android:text="@{representative.official.party}"
            app:layout_constraintStart_toStartOf="@+id/official_name"
            app:layout_constraintTop_toBottomOf="@+id/official_name"
            tools:text="Party Name" />

        <ImageView
            android:id="@+id/twitter_icon"
            style="@style/img_style_address"
            android:contentDescription="@string/a_image_of_twitter_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

        <ImageView
            android:id="@+id/facebook_icon"
            style="@style/img_style_address"
            android:contentDescription="@string/a_image_of_the_facebook_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/www_icon"
            style="@style/img_style_address"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/a_image_representing_the_world_wide_web"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/facebook_icon"
            app:srcCompat="@drawable/ic_www" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
